codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__local_daemon_alpha_mismatch.snap
---
source: tui/src/history_cell/tests.rs
expression: "render_lines(&cell.display_lines(100)).join(\"\\n\")"
---
⚠ A background Codex service is running v0.156.0, different from your ASM CLI v0.155.0-alpha.12.
  Use /daemon to manage the local background server.
  Updating may interrupt active or queued work.
